<resources>
    <string name="app_name">FOB_Demo</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="user_name">Username</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="forget_password">forget Password?</string>
    <string name="need_a_new_account">Need a New Account?</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="attention_the_e_mail_address_must_match_the_registered_e_mail_address">Attention, the e-mail address must match the registered e-mail address.</string>
    <string name="confirm">Confirm</string>
    <string name="abort">Abort</string>
    <string name="send_email">We have send you instructions to reset your password!</string>
    <string name="email_send_fail">Failed to send reset email!</string>
    <string name="error_text">Please enter your email</string>
    <string name="full_name">Full name</string>
    <string name="account_creating">Creating Account</string>
    <string name="please_wait_creating_account">Please wait, while we are creating your account…</string>
    <string name="fill_all_fields">All Fields are Required!</string>
    <string name="password_must_be_at_least_6_characters">Password must be least 6 characters</string>
    <string name="account_created_successfully">Account created Successfully</string>
    <string name="account_creation_failed">Account creation Failed</string>
    <string name="you_not_register">You are NOT Register with Email and Password!</string>
    <string name="login_progress">Login Progress</string>
    <string name="login_progress_message">please wait....</string>
    <string name="authentication_fail">Authentication Failed!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="username">username</string>
    <string name="post">POST</string>
    <string name="image_description">Description</string>
    <string name="something_wrong">Something gone wrong!</string>
    <string name="failed">Failed!</string>
    <string name="no_image_selected">No image Selected!</string>
    <string name="view_all_20_comments">View all 20 Comments</string>
    <string name="add_a_comment">Add a Comment…</string>
    <string name="empty_comments_error">You can not send empty comments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="photos">Photos</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="change_photo">Change Photo</string>
    <string name="description">Description</string>
    <string name="notifications">Notifications</string>
    <string name="comments">commented: "</string>
    <string name="comment">Comments</string>
    <string name="commeded">\"Commented: \"</string>
    <string name="follow_you_now">started following you</string>
    <string name="start_follow_you_now">started following you</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="delete">Deleted!</string>


</resources>