<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/black"
    tools:context=".LoginActivity">



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:contentDescription="app_logo"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="35dp"
        android:src="@drawable/app_logo"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/teal_700"
        android:drawableStart="@drawable/ic_ed_email"
        android:drawablePadding="10dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/white"
        tools:ignore="Autofill" />



    <EditText
        android:id="@+id/password"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/teal_700"
        android:drawableStart="@drawable/ic_ed_password"
        android:textColorHint="@color/white"
        android:drawablePadding="10dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:clickable="true"
        android:textColor="@color/white"
        android:text="@string/forget_password"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="end"
        android:gravity="center"
        app:drawableStartCompat="@drawable/ic_arrow_little_right" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/log_in"
        android:background="@drawable/button_background"/>


    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        tools:ignore="TextSizeCheck">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/need_a_new_account"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/needNewAccountLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:clickable="true"
            android:textColor="@color/teal_200"
            android:text="@string/register"/>

    </LinearLayout>





</LinearLayout>