<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".RegisterActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:contentDescription="app_logo"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="35dp"
        android:src="@drawable/app_logo"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/edUsername"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/teal_700"
        android:drawableStart="@drawable/ic_ed_username"
        android:drawablePadding="10dp"
        android:hint="@string/user_name"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/white"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/teal_700"
        android:drawableStart="@drawable/ic_ed_email"
        android:textColorHint="@color/white"
        android:drawablePadding="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/white"
        tools:ignore="Autofill,HardcodedText" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/teal_700"
        android:drawableStart="@drawable/ic_ed_password"
        android:textColorHint="@color/white"
        android:drawablePadding="10dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        tools:ignore="Autofill" />



    <Button
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/register"
        android:background="@drawable/button_background"/>


    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        tools:ignore="TextSizeCheck">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/alreadyHaveAnAccountLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            android:text="@string/log_in"/>

    </LinearLayout>








</LinearLayout>