<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".Start.Authentication.Recovery.RecoveryPasswordActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="35dp"
        android:contentDescription="app_logo"
        android:src="@drawable/app_logo"
        tools:ignore="HardcodedText" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="19sp"
        android:layout_marginBottom="30dp"
        android:text="@string/password_recovery"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/infobox_layout"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/attention_the_e_mail_address_must_match_the_registered_e_mail_address"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/teal_700"
            android:drawableStart="@drawable/ic_ed_email"
            android:drawablePadding="10dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/white"
            tools:ignore="Autofill" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_recovery_password"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/confirm"
        android:background="@drawable/button_background"/>

    <Button
        android:id="@+id/btn_recovery_abort"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/abort"
        android:background="@drawable/button_background"/>


</LinearLayout>