<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.EditProfileActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:backgroundTint="@color/black">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_toEndOf="@id/close"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentEnd="true"
                    android:text="@string/save"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_close"
                    tools:ignore="ContentDescription"
                    app:tint="@color/white" />





            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ImageContrastCheck">

        </de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:id="@+id/tv_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_photo"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="16sp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_fullname"
            android:drawableEnd="@drawable/ic_change"
            android:drawablePadding="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/full_name"
            app:met_textColorHint="#838282"
            app:met_floatingLabel="normal"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/username"
            android:hint="@string/user_name"
            android:drawableStart="@drawable/ic_ed_username"
            android:drawableEnd="@drawable/ic_change"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:met_textColorHint="#838282"
            app:met_floatingLabel="normal"
            tools:ignore="DuplicateIds" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:drawableStart="@drawable/ic_bio"
            android:drawablePadding="13dp"
            android:drawableEnd="@drawable/ic_change"
            app:met_textColorHint="#838282"
            android:layout_marginTop="20dp"
            app:met_floatingLabel="normal"/>



    </LinearLayout>

</LinearLayout>